--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^2.1.3",
+    "@vercel/analytics": "^0.1.6",
     "astro": "^1.6.15",
     "tailwindcss": "^3.2.4"
   },
