--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
+    "@astrojs/partytown": "^1.0.2",
     "@tailwindcss/typography": "^0.5.8"
   }
 }
