--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^2.1.3",
+    "@astrojs/tailwind": "^3.0.0-beta.1",
     "@vercel/analytics": "^0.1.6",
-    "astro": "^1.6.15",
+    "astro": "^2.0.1",
     "tailwindcss": "^3.2.4"
   },
   "devDependencies": {
     "@astrojs/partytown": "^1.0.2",
-    "@tailwindcss/typography": "^0.5.8"
+    "@tailwindcss/typography": "^0.5.8",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2"
   }
 }
