--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/tailwind": "^3.0.0-beta.1",
-    "@vercel/analytics": "^0.1.6",
-    "astro": "^2.0.1",
-    "tailwindcss": "^3.2.4"
+    "@astrojs/tailwind": "5.0.0",
+    "@vercel/analytics": "^0.1.11",
+    "astro": "3.0.7",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@astrojs/partytown": "^1.0.2",
-    "@tailwindcss/typography": "^0.5.8",
-    "prettier": "^2.8.3",
-    "prettier-plugin-tailwindcss": "^0.2.2"
+    "@astrojs/partytown": "^1.2.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "prettier": "^2.8.8",
+    "prettier-plugin-tailwindcss": "^0.2.8"
   }
 }
