--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/tailwind": "5.0.0",
     "@vercel/analytics": "^0.1.11",
     "astro": "3.0.7",
+    "fs": "0.0.1-security",
     "sharp": "^0.32.5",
     "tailwindcss": "^3.3.3"
   },
