--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/mdx": "^2.1.1",
     "@astrojs/tailwind": "5.1.0",
     "@vercel/analytics": "^0.1.11",
     "astro": "4.3.2",
